[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/modes/sumslide/SumSlideGame.gd" id="1_fc8aq"]

[node name="SumSlideGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fc8aq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.0901961, 0.117647, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScoreLabel" type="Label" parent="Margin/VBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Score: 0"
theme_override_font_sizes/font_size = 16

[node name="BestLabel" type="Label" parent="Margin/VBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Best: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="ComboLabel" type="Label" parent="Margin/VBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Combo: x0"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 16

[node name="PauseButton" type="Button" parent="Margin/VBox/TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Pause"
theme_override_font_sizes/font_size = 15

[node name="BoardCenter" type="CenterContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoardGrid" type="GridContainer" parent="Margin/VBox/BoardCenter"]
unique_name_in_owner = true
layout_mode = 2
columns = 5
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6

[node name="HintLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Swipe anywhere to move the board"
horizontal_alignment = 1

[node name="PauseOverlay" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseCenter" type="CenterContainer" parent="PauseOverlay"]
layout_mode = 2

[node name="PauseVBox" type="VBoxContainer" parent="PauseOverlay/PauseCenter"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PauseTitle" type="Label" parent="PauseOverlay/PauseCenter/PauseVBox"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 30

[node name="ResumeButton" type="Button" parent="PauseOverlay/PauseCenter/PauseVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="PauseEndRunButton" type="Button" parent="PauseOverlay/PauseCenter/PauseVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "End Run"

[node name="PauseMenuButton" type="Button" parent="PauseOverlay/PauseCenter/PauseVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Menu"

[node name="NoMovesOverlay" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.15
anchor_top = 0.24
anchor_right = 0.85
anchor_bottom = 0.76
grow_horizontal = 2
grow_vertical = 2

[node name="NoMovesMargin" type="MarginContainer" parent="NoMovesOverlay"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="NoMovesVBox" type="VBoxContainer" parent="NoMovesOverlay/NoMovesMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NoMovesLabel" type="Label" parent="NoMovesOverlay/NoMovesMargin/NoMovesVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Game Over: 3 Strikes"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="RewardedShuffleButton" type="Button" parent="NoMovesOverlay/NoMovesMargin/NoMovesVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Rewarded Shuffle"

[node name="RewardedUndoButton" type="Button" parent="NoMovesOverlay/NoMovesMargin/NoMovesVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Rewarded Undo"

[node name="EndRunButton" type="Button" parent="NoMovesOverlay/NoMovesMargin/NoMovesVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "End Run"
